🔧 CORRECCIÓN CRÍTICA: BESS_CAPACITY_KWH actualizada a 2000 kWh (v5.8)
PROBLEMA ENCONTRADO:
- BESS_CAPACITY_KWH estaba hardcodeado en 1700.0 kWh
- Valor REAL en bess_ano_2024.csv: max soc_kwh = 2000.0 kWh
- Diferencia: 300 kWh (17.6% de error)

VALIDACIÓN DE DATOS REALES:
✅ Solar: pv_generation_citylearn2024.csv (8,760 horas @ 190.4 kW avg)
✅ BESS: bess_ano_2024.csv (2,000 kWh capacity, min SOC 795 kWh = 39.8%)
✅ Chargers: chargers_ev_ano_2024_v3.csv (38 sockets × 21 parámetros)
✅ Demand: demandamallhorakwh.csv (8,760 horas @ 1411.9 kW avg)

CAMBIOS:
- data_loader.py v5.6 → v5.8
- BESS_CAPACITY_KWH: 1700.0 → 2000.0 kWh
- Docstring actualizado con validaciones reales
- Verificación end-to-end: ✅ PASS

IMPACTO:
- CO2 calculation: +300 kWh storage potential
- Grid balancing: +15% usable storage
- All agent training: debe reentrenarse con valor correcto

--- a/docs/4.6.4_SELECCION_AGENTE_INTELIGENTE.md
+++ b/docs/4.6.4_SELECCION_AGENTE_INTELIGENTE.md
@@ -90,6 +90,8 @@ Se definió un **score compuesto ponderado**:
 
 ### 3.4 Reducción de CO₂ Respecto a Baseline Sin Solar
 
+
+
 | Agente | CO₂ con Control | Reducción (kg) | Reducción (%) |
 |--------|-----------------|----------------|---------------|
 | **A2C** | 2,200,222 | **3,647,478** | **62.4%** |
@@ -147,7 +149,7 @@ El agente A2C aprendió las siguientes estrategias óptimas:
 | Métrica | Valor |
 |---------|-------|
 | **Emisiones con A2C** | 2,200,222 kg CO₂/año |
-| **Baseline sin solar** | 5,847,700 kg CO₂/año |
+| **Baseline SIN Solar** | 5,847,700 kg CO₂/año |
 | **Reducción absoluta** | **3,647,478 kg CO₂/año** |
 | **Reducción porcentual** | **62.4%** |
 | **Equivalente en toneladas** | **3,647.5 t CO₂/año** |
